--- a/style.css
+++ b/style.css
@@ -11,6 +11,14 @@ html{
   font-size: x-large;
 }
 
+.menu {
+  display: inline-flexbox;
+  text-align: center;
+  padding-bottom: 10px;
+  font-style: italic;
+  
+}
+
 nav {
   height:1%;
   background-color: rgb(255, 255, 255);
@@ -51,6 +59,12 @@ p{
   margin: 10px;
 }
 
+h2 {
+  padding-left: 10px;
+  text-align: left;
+  color: #054074;
+}
+
 .firstcolumn{
   float: left;
   width: 20%;
@@ -65,6 +79,15 @@ p{
   padding: 5px;
   margin:1%;
   border-radius: 2%;
+}
+.movieClick {
+  font-style: italic;
+  cursor: pointer;
+}
+#titleName {
+  font-style: italic;
+  color: #054074;
+  margin-left: 7px;
 }
 
 .thirdcolumn{
@@ -89,21 +112,25 @@ footer {
 
 footer p {
    font-weight: bold;
+   font-size: 20px;
+   font-style: italic;
 }
 
 .leftFoot {
   float: left;
   width: 33%;
+  text-align: right;
   
 }
 
 .middleFoot {
   float:left;
   width: 33%;
+  text-align: center;
 }
 
 .rightFoot {
-  float: right;
+  float: left;
   width: auto;
 }
 
@@ -124,4 +151,3 @@ width:75%;
 border: solid black 1px;
 margin:15px;
 }
-
