--- a/style.css
+++ b/style.css
@@ -145,9 +145,50 @@ img {
 }
 
 .seatingBooking {
-  background-color: white;
+color:white;
+background-color: rgb(0, 0, 0);
 float: left;
-width:75%;
+width:100%;
 border: solid black 1px;
-margin:15px;
+margin:5px;
+padding: 5px;
 }
+
+.seats{
+font-family: 'Courier New', Courier, monospace;
+text-decoration: underline;
+display: inline-block;
+font-size: large;
+font-weight: bolder;
+color: rgb(27, 10, 10);
+background-color: rgb(235, 3, 3);
+border: solid 1px grey;
+border-radius: 10%;
+margin: 1px;
+}
+
+.seatingBooking button {
+  margin-top: 10px;
+  margin-right: 10px;
+  margin-bottom: 5px;
+  margin-left: 5px;
+  padding: 5px;
+  font-weight: bold;
+  border:none;
+}
+
+button:hover {
+  background-color: lightgrey;
+  cursor:pointer;
+}
+
+.booked {
+  
+}
+
+.seats:hover {
+  background-color: yellow;
+  cursor:pointer;
+}
+
+
