--- a/style.css
+++ b/style.css
@@ -71,18 +71,17 @@ h2 {
 
 .firstcolumn{
   float: left;
-  width: 20%;
+  width: 25%;
   padding: 5px;
+  padding-left: 100px;
   margin:1%;
   border-radius: 2%;
 }
 .secondcolumn{
   float: left;
-  width: 40%;
+  width: 25%;
   background-color: rgb(212, 218, 226);
-  padding: 5px;
   margin:1%;
-  border-radius: 2%;
 }
 #movieText {
   float: left;
@@ -92,17 +91,21 @@ h2 {
   float: left;
   width: 50%;
 }
+#trailer {
+  position:relative;
+  width: 24.7vw;
+  height: 19vw;
+  overflow:scroll;
+  
+}
 .movieClick {
   font-style: italic;
   cursor: pointer;
 }
 #moviePic {
-  width: 50%;
-  position: center;
-  display: block;
-  margin-left: auto;
-  margin-top: auto;
-  border-radius: 10px;
+  width: auto !important;
+  max-width: 100%;
+  height: auto;
 }
 #titleName {
   font-style: italic;
@@ -152,7 +155,7 @@ h2 {
 
 img {
   width:25%;
-  border-radius: 5%;
+
 }
 
 .higlightedMovie {
