--- a/style.css
+++ b/style.css
@@ -106,6 +106,7 @@ h2 {
   width: auto !important;
   max-width: 100%;
   height: auto;
+  float:right;
 }
 #titleName {
   font-style: italic;
@@ -250,6 +251,10 @@ button:hover {
   color:red;
   font-weight: bolder;
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.filmObj:last-child{
+  display:none;
 }
 
 
