--- a/style.css
+++ b/style.css
@@ -188,16 +188,25 @@ border-radius: 3%;
 
 .seats{
   width:46px;
+  height:25px;
+  padding-top:5px;
 font-family: 'Courier New', Courier, monospace;
-text-decoration: underline;
+/* text-decoration: underline; */
 display: inline-block;
 font-size: large;
 font-weight: bolder;
 color: rgb(27, 10, 10);
 background-color: red;
 border: solid 1px grey;
-border-radius: 10%;
+/* border-radius: 10%; */
 margin: 1px;
+margin-bottom:10px;
+border-bottom-left-radius:35%;
+border-bottom-right-radius:35%;
+}
+
+.seatsrow:nth-child(5n){
+  margin:35px;
 }
 
 .seatingBooking button {
