--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ html{
 }
 
 header{
-  background-color: ;
+  /* background-color: ; */
 }
 
 .logo{
@@ -79,7 +79,7 @@ h2 {
   padding: 5px;
   padding-left: 10px;
   margin:1%;
-  border-radius: 3%;
+  border-radius: 2%;
 }
 .secondcolumn{
   float: left;
@@ -87,7 +87,7 @@ h2 {
   background-color:rgb(233, 233, 233);
   margin:1%;
   padding: 1%;
-  border-radius: 3%;
+  border-radius: 2%;
 }
 #movieText {
   float: left;
@@ -125,7 +125,7 @@ h2 {
   width:auto;
   padding: 5px;
   margin:1%;
- border-radius: 3%;
+ border-radius: 2%;
 }
 
 .footer {
@@ -173,7 +173,7 @@ background-color: rgba(216, 218, 221, 0.507);
 margin:5px;
 margin:1%;
 padding: 5px;
-border-radius: 3%;
+border-radius: 2%;
 }
 
 .seatingBooking {
@@ -182,12 +182,14 @@ background-color: rgb(0, 0, 0);
 width:99%;
 border: solid black 1px;
 margin:5px;
-padding: 5px;
-border-radius: 3%;
+padding: 10px;
+border-radius: 2%;
+padding-right: 25px;
+padding-left: 25px;
 }
 
 .seats{
-  width:46px;
+  width:40px;
   height:25px;
   padding-top:5px;
 font-family: 'Courier New', Courier, monospace;
@@ -201,6 +203,7 @@ border: solid 1px grey;
 /* border-radius: 10%; */
 margin: 1px;
 margin-bottom:10px;
+margin-right:3px;
 border-bottom-left-radius:35%;
 border-bottom-right-radius:35%;
 }
@@ -210,7 +213,7 @@ border-bottom-right-radius:35%;
 }
 
 .seatingBooking button {
-  margin-top: 10px;
+  margin-top: 20px;
   margin-right: 10px;
   margin-bottom: 5px;
   margin-left: 5px;
@@ -234,7 +237,7 @@ button:hover {
   color: rgb(7, 7, 7);
   background-color:white;
   border: solid grey 3px;
-  margin-bottom: 5px;
+  margin-bottom: 45px;
 }
 
 .visning{
