--- a/style.css
+++ b/style.css
@@ -242,14 +242,14 @@ button:hover {
 
 .visning{
   width:99%;
-  margin:10px;
-  padding: 5px;
+  margin:5px;
+  padding: 8px;
 }
 .visning p{
   
   background-color: white;
   border: solid 1px black;
-  padding:5px;
+ 
 }
 
 .schemarubrik{
@@ -257,7 +257,7 @@ button:hover {
 }
 
 .visning span:hover {
-  background-color: yellow;
+  /* background-color: yellow; */
   cursor:pointer;
 }
 
@@ -286,3 +286,52 @@ button:hover {
 iframe{
   border-radius: 3%;
 }
+
+/* XXXXXXXXXXXXXXXX DROPDOWN XXXXXXXXXXXXXXXX */
+
+
+/* Dropdown Button */
+.dropbtn {
+  background-color: #3498DB;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+/* Dropdown button on hover & focus */
+.dropbtn:hover, .dropbtn:focus {
+  background-color: #2980B9;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  width:300px;
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  /* padding: 12px 16px; */
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #ddd}
+
+/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+.show {display:block;}
