--- a/style.css
+++ b/style.css
@@ -1,19 +1,15 @@
-html{
-  width:100vw;
+html {
+  width: 100vw;
 }
 
-header{
-  /* background-color: ; */
-}
-
-.logo{
+.logo {
   display: inline-block;
-  color:white;
+  color: white;
   background-color: black;
   border: 1px solid black;
-  padding-left:10px;
-  padding-right:10px;
-  margin:5px;  
+  padding-left: 10px;
+  padding-right: 10px;
+  margin: 5px;
   font-weight: bolder;
   font-size: large;
   vertical-align: middle;
@@ -25,11 +21,10 @@ header{
   text-align: center;
   padding-bottom: 10px;
   font-style: italic;
-  
 }
 
 nav {
-  height:1%;
+  height: 1%;
   background-color: rgb(255, 255, 255);
   border-top: solid rgb(0, 0, 0) 1px;
   border-bottom: solid rgb(0, 0, 0) 1px;
@@ -39,31 +34,31 @@ nav a {
   font-family: verdana;
   font-size: medium;
   color: rgb(0, 0, 0);
-  background-color:rgb(255, 255, 255);
+  background-color: rgb(255, 255, 255);
   display: inline-block;
-    margin-left:30px;
-    margin-right:10px;  
+  margin-left: 30px;
+  margin-right: 10px;
 }
 
-h1{
-font-family: 'David Libre', serif;
-position:sticky;
+h1 {
+  font-family: 'David Libre', serif;
+  position: sticky;
 }
 
-body{
-font-family: 'David Libre', serif;
-background-color: rgb(253, 254, 255);
+body {
+  font-family: 'David Libre', serif;
+  background-color: rgb(253, 254, 255);
 }
 
-.login{
-  float:right;
-  
+.login {
+  float: right;
+
   color: rgb(48, 20, 202);
-  
-  margin-top:5px;
+
+  margin-top: 5px;
 }
 
-p{
+p {
   margin: 10px;
 }
 
@@ -73,19 +68,19 @@ h2 {
   color: #054074;
 }
 
-.firstcolumn{
+.firstcolumn {
   float: left;
   width: 10%;
   padding: 5px;
   padding-left: 10px;
-  margin:1%;
+  margin: 1%;
   border-radius: 2%;
 }
-.secondcolumn{
+.secondcolumn {
   float: left;
   width: 25%;
-  background-color:rgb(233, 233, 233);
-  margin:1%;
+  background-color: rgb(233, 233, 233);
+  margin: 1%;
   padding: 1%;
   border-radius: 2%;
 }
@@ -98,11 +93,10 @@ h2 {
   width: 50%;
 }
 #trailer {
-  position:relative;
+  position: relative;
   width: 24.7vw;
   height: 19vw;
-  overflow:scroll;
-  
+  overflow: scroll;
 }
 .movieClick {
   font-style: italic;
@@ -112,7 +106,7 @@ h2 {
   width: auto !important;
   max-width: 100%;
   height: auto;
-  float:right;
+  float: right;
 }
 #titleName {
   font-style: italic;
@@ -120,38 +114,37 @@ h2 {
   margin-left: 7px;
 }
 
-.thirdcolumn{
+.thirdcolumn {
   float: left;
-  width:auto;
+  width: auto;
   padding: 5px;
-  margin:1%;
- border-radius: 2%;
+  margin: 1%;
+  border-radius: 2%;
 }
 
 .footer {
-  float:left;
-  width:100vw;
+  float: left;
+  width: 100vw;
   background-color: rgba(50, 91, 168, 0.808);
-  color: black;         
+  color: black;
   padding-bottom: 1%;
   border-top: solid black 1px;
 }
 
 .footer p {
-   font-weight: bold;
-   font-size: 20px;
-   font-style: italic;
+  font-weight: bold;
+  font-size: 20px;
+  font-style: italic;
 }
 
 .leftFoot {
   float: left;
   width: 33%;
   text-align: right;
-  
 }
 
 .middleFoot {
-  float:left;
+  float: left;
   width: 33%;
   text-align: center;
 }
@@ -164,52 +157,51 @@ h2 {
 img {
   width: 25%;
   border-radius: 3%;
-  }
+}
 
-
-.schema{
-width:99%;
-background-color: rgba(216, 218, 221, 0.507);
-margin:5px;
-margin:1%;
-padding: 5px;
-border-radius: 2%;
+.schema {
+  width: 99%;
+  background-color: rgba(216, 218, 221, 0.507);
+  margin: 5px;
+  margin: 1%;
+  padding: 5px;
+  border-radius: 2%;
 }
 
 .seatingBooking {
-color:white;
-background-color: rgb(0, 0, 0);
-width:99%;
-border: solid black 1px;
-margin:5px;
-padding: 10px;
-border-radius: 2%;
-padding-right: 25px;
-padding-left: 25px;
+  color: white;
+  background-color: rgb(0, 0, 0);
+  width: 99%;
+  border: solid black 1px;
+  margin: 5px;
+  padding: 10px;
+  border-radius: 2%;
+  padding-right: 25px;
+  padding-left: 25px;
 }
 
-.seats{
-  width:40px;
-  height:25px;
-  padding-top:5px;
-font-family: 'Courier New', Courier, monospace;
-/* text-decoration: underline; */
-display: inline-block;
-font-size: large;
-font-weight: bolder;
-color: rgb(27, 10, 10);
-background-color: red;
-border: solid 1px grey;
-/* border-radius: 10%; */
-margin: 1px;
-margin-bottom:10px;
-margin-right:3px;
-border-bottom-left-radius:35%;
-border-bottom-right-radius:35%;
+.seats {
+  width: 40px;
+  height: 25px;
+  padding-top: 5px;
+  font-family: 'Courier New', Courier, monospace;
+  /* text-decoration: underline; */
+  display: inline-block;
+  font-size: large;
+  font-weight: bolder;
+  color: rgb(27, 10, 10);
+  background-color: red;
+  border: solid 1px grey;
+  /* border-radius: 10%; */
+  margin: 1px;
+  margin-bottom: 10px;
+  margin-right: 3px;
+  border-bottom-left-radius: 35%;
+  border-bottom-right-radius: 35%;
 }
 
-.seatsrow:nth-child(5n){
-  margin:35px;
+.seatsrow:nth-child(5n) {
+  margin: 35px;
 }
 
 .seatingBooking button {
@@ -219,52 +211,50 @@ border-bottom-right-radius:35%;
   margin-left: 5px;
   padding: 5px;
   font-weight: bold;
-  border:none;
+  border: none;
 }
 
 button:hover {
   background-color: lightgrey;
-  cursor:pointer;
+  cursor: pointer;
 }
 
 .seats:hover {
   background-color: yellow;
-  cursor:pointer;
+  cursor: pointer;
 }
 
-.movieScreen{
-  width:80%;
+.movieScreen {
+  width: 80%;
   color: rgb(7, 7, 7);
-  background-color:white;
+  background-color: white;
   border: solid grey 3px;
   margin-bottom: 45px;
 }
 
-.visning{
-  width:99%;
-  margin:5px;
+.visning {
+  width: 99%;
+  margin: 5px;
   padding: 8px;
 }
-.visning p{
-  
+.visning p {
   background-color: white;
   border: solid 1px black;
- 
 }
 
-.schemarubrik{
+.schemarubrik {
   font-weight: bold;
 }
 
 .visning span:hover {
   /* background-color: yellow; */
-  cursor:pointer;
+  cursor: pointer;
 }
 
-.hook{
+.hook {
   display: inline-block;
-  padding-left:3px;
-  color:red;
+  padding-left: 3px;
+  color: red;
   font-weight: bolder;
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -273,26 +263,25 @@ button:hover {
   display:none;
 } */
 
-.summaryTickets{
-  float:right;
-  width:auto;
+.summaryTickets {
+  float: right;
+  width: auto;
 }
 
-.firstimage{
-  width:100%;
+.firstimage {
+  width: 100%;
   border-radius: 3%;
 }
 
-iframe{
+iframe {
   border-radius: 3%;
 }
 
 /* XXXXXXXXXXXXXXXX DROPDOWN XXXXXXXXXXXXXXXX */
 
-
 /* Dropdown Button */
 .dropbtn {
-  background-color: #3498DB;
+  background-color: #3498db;
   color: white;
   padding: 16px;
   font-size: 16px;
@@ -301,13 +290,14 @@ iframe{
 }
 
 /* Dropdown button on hover & focus */
-.dropbtn:hover, .dropbtn:focus {
-  background-color: #2980B9;
+.dropbtn:hover,
+.dropbtn:focus {
+  background-color: #2980b9;
 }
 
 /* The container <div> - needed to position the dropdown content */
 .dropdown {
-  width:300px;
+  width: 300px;
   position: relative;
   display: inline-block;
 }
@@ -318,8 +308,12 @@ iframe{
   position: absolute;
   background-color: #f1f1f1;
   min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
+  max-height: 400px;
+  /* max-width: 300px; */
+  overflow-x: hidden;
+  overflow-y: scroll;
 }
 
 /* Links inside the dropdown */
@@ -331,7 +325,18 @@ iframe{
 }
 
 /* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #ddd}
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
 
 /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-.show {display:block;}
+.show {
+  display: block;
+}
+
+.visning span {
+  font-weight: bolder;
+}
+.visning span text {
+  font-weight: lighter;
+}
