--- a/style.css
+++ b/style.css
@@ -277,7 +277,7 @@ iframe {
   border-radius: 3%;
 }
 
-/* XXXXXXXXXXXXXXXX DROPDOWN XXXXXXXXXXXXXXXX */
+/* XXXXXXXXXXXXXXX DROPDOWN MENU XXXXXXXXXXXXXXX */
 
 /* Dropdown Button */
 .dropbtn {
