--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-html {
-  width: 100vw;
-}
-
 .logo {
   display: inline-block;
   color: white;
@@ -20,35 +16,40 @@ html {
   display: inline-block;
   text-align: center;
   padding-bottom: 10px;
-  font-style: italic;
 }
 
-nav {
-  height: 1%;
-  background-color: rgb(255, 255, 255);
-  border-top: solid rgb(0, 0, 0) 1px;
-  border-bottom: solid rgb(0, 0, 0) 1px;
+nav,
+footer {
+  background-color: lightblue;
 }
 
-nav a {
+header nav a {
   font-family: verdana;
   font-size: medium;
   color: rgb(0, 0, 0);
-  background-color: rgb(255, 255, 255);
   display: inline-block;
   margin-left: 30px;
   margin-right: 10px;
+  text-decoration: none;
+  font-weight: bolder;
+  font-size: large;
 }
 
 h1 {
   font-family: 'David Libre', serif;
-  position: sticky;
 }
 
 body {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
   font-family: 'David Libre', serif;
   background-color: rgb(253, 254, 255);
   width: 100%;
+}
+
+main {
+  flex: 1;
 }
 
 .login {
@@ -128,18 +129,12 @@ h2 {
 }
 
 .footer {
-  position: bottom;
-  float: left;
+  font-family: verdana;
+  font-size: smaller;
   width: 100vw;
-  background-color: rgba(50, 91, 168, 0.808);
   color: black;
   padding-bottom: 1%;
-  border-top: solid black 1px;
-}
-
-.footer p {
   font-weight: bold;
-  font-size: 20px;
   font-style: italic;
 }
 
@@ -225,9 +220,16 @@ button:hover {
   cursor: pointer;
 }
 
-.seats:hover {
+/* .seats:hover {
+  background-color: rgb(45, 194, 45);
+  cursor: pointer;
+} */
+
+.a-hover:hover {
   background-color: yellow;
   cursor: pointer;
+  padding: 10px 0px 10px 0px;
+  border-radius: 5px;
 }
 
 .movieScreen {
@@ -350,8 +352,8 @@ iframe {
 #booking-button {
   margin: 30px 30px 0px 30px;
 }
-.secondcolumn p{
-  text-align: left; 
+.secondcolumn p {
+  text-align: left;
 }
 form {
   margin-left: 10px;
