--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ h2 {
 }
 .secondcolumn {
   float: left;
-  width: 25%;
+  width: 40%;
   background-color: rgb(233, 233, 233);
   margin: 1%;
   padding: 1%;
@@ -89,6 +89,7 @@ h2 {
   padding-bottom: 2.5rem;
   display: block;
 }
+
 #movieText {
   float: left;
   width: 50%;
@@ -109,7 +110,7 @@ h2 {
 }
 #moviePic {
   width: auto !important;
-  max-width: 100%;
+  max-width: 50%;
   height: auto;
   float: right;
 }
@@ -119,14 +120,14 @@ h2 {
   margin-left: 10px;
 }
 
-.thirdcolumn {
+/* .thirdcolumn {
   float: left;
   width: auto;
   padding: 5px;
   margin: 1%;
   border-radius: 2%;
   display: block;
-}
+} */
 
 .footer {
   font-family: verdana;
@@ -220,11 +221,6 @@ button:hover {
   cursor: pointer;
 }
 
-/* .seats:hover {
-  background-color: rgb(45, 194, 45);
-  cursor: pointer;
-} */
-
 .a-hover:hover {
   background-color: yellow;
   cursor: pointer;
@@ -255,7 +251,6 @@ button:hover {
 }
 
 .visning span:hover {
-  /* background-color: yellow; */
   cursor: pointer;
 }
 
@@ -266,10 +261,6 @@ button:hover {
   font-weight: bolder;
   font-family: Arial, Helvetica, sans-serif;
 }
-
-/* .filmObj:last-child{
-  display:none;
-} */
 
 .summaryTickets {
   float: right;
@@ -285,69 +276,13 @@ iframe {
   border-radius: 3%;
 }
 
-/* XXXXXXXXXXXXXXX DROPDOWN MENU XXXXXXXXXXXXXXX */
-
-/* Dropdown Button */
-.dropbtn {
-  background-color: #3498db;
-  color: white;
-  padding: 16px;
-  font-size: 16px;
-  border: none;
-  cursor: pointer;
-}
-
-/* Dropdown button on hover & focus */
-.dropbtn:hover,
-.dropbtn:focus {
-  background-color: #2980b9;
-}
-
-/* The container <div> - needed to position the dropdown content */
-.dropdown {
-  width: 300px;
-  position: relative;
-  display: inline-block;
-}
-
-/* Dropdown Content (Hidden by Default) */
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f1f1f1;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
-  max-height: 400px;
-  /* max-width: 300px; */
+/* .scheduleObj {
+  max-height: 200px;
+ max-width: 300px; 
   overflow-x: hidden;
   overflow-y: scroll;
-}
+} */
 
-/* Links inside the dropdown */
-.dropdown-content a {
-  color: black;
-  /* padding: 12px 16px; */
-  text-decoration: none;
-  display: block;
-}
-
-/* Change color of dropdown links on hover */
-.dropdown-content a:hover {
-  background-color: #ddd;
-}
-
-/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-.show {
-  display: block;
-}
-
-.visning span {
-  font-weight: bolder;
-}
-.visning span text {
-  font-weight: lighter;
-}
 /* ---------------------- BOKNINGSFORMULÄR STYLING ---------------------- */
 #booking-button {
   margin: 30px 30px 0px 30px;
