--- a/css/footer.css
+++ b/css/footer.css
@@ -2,8 +2,9 @@
   font-family: verdana;
   font-size: smaller;
   width: 100vw;
-  color: black;
-  padding-bottom: 1%;
+  background-color: #24252A;
+  padding-bottom: 12px;
+  padding-top: 12px;
   font-weight: bold;
   font-style: italic;
 }
@@ -23,4 +24,7 @@
 .rightFoot {
   float: left;
   width: auto;
+}
+.rightFoot:hover {
+  background-color: #0088a9;
 }
