--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
+
 @import './footer.css';
 @import './header.css';
 @import './movieInformation.css';
 @import './seats-booking.css';
+@import './pictureLinks.css';
 
 nav,
 footer {
@@ -16,8 +19,8 @@ body {
   display: flex;
   min-height: 100vh;
   flex-direction: column;
-  font-family: 'David Libre', serif;
-  background-color: rgb(253, 254, 255);
+  font-family: 'Montserrat', serif;
+  background-color: rgb(188, 196, 201);
   width: 100%;
 }
 main {
@@ -25,17 +28,18 @@ main {
 }
 p {
   margin: 10px;
+  color: #fff;
 }
 
 h2 {
   padding-left: 10px;
   text-align: left;
-  color: #054074;
+  color: #ffffff;
 }
 
 .firstcolumn {
   float: left;
-  width: 10%;
+  width: 20%;
   padding: 5px;
   padding-left: 10px;
   margin: 1%;
@@ -45,7 +49,7 @@ h2 {
 .secondcolumn {
   float: left;
   width: 40%;
-  background-color: rgb(233, 233, 233);
+  /* background-color: rgb(255, 255, 255); */
   margin: 1%;
   padding: 1%;
   border-radius: 2%;
@@ -60,10 +64,12 @@ h2 {
   border-radius: 2%;
   display: block;
 } */
-img {
+
+/* Kommenterar ut denna så den inte ändrar bilder per automatik */
+/* img {
   width: 25%;
   border-radius: 3%;
-}
+} */
 
 .visning {
   width: 99%;
