--- a/css/header.css
+++ b/css/header.css
@@ -33,6 +33,9 @@ li, a, .login{
   font-size: 16px;
   color: #edf0f1;
   text-decoration: none;
+  position:relative;
+    /* bottom:-25px;
+    vertical-align:bottom; */
 }
  .login {
   padding: 9px 25px;
