--- a/css/seats-booking.css
+++ b/css/seats-booking.css
@@ -64,15 +64,21 @@ button:hover {
   margin-bottom: 45px;
 }
 
-/* .schema {
+.colorBG p{
+  color: blue;
+  background-color: aquamarine;
+}
+
+.schema {
   width: 99%;
   /* background-color: rgb(188, 196, 201); */
   margin: 5px;
   margin: 1%;
   padding: 5px;
   border-radius: 2%;
-} */
+}
 
-/* .partTwoSecondColumn{
-  background-color: rgb(188, 196, 201);
-} */
+select {
+  padding: 5px;
+}
+
