--- a/css/header.css
+++ b/css/header.css
@@ -1,38 +1,50 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
 header{
-  background-color: #24252A;
+  /* background-color: rgb(36, 37, 42); */
+  position: relative;
 }
 .nav-links {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  background-color: #24252A;
+  background-color: transparent;
   list-style: none;
 }
 .nav-links li {
   display: inline-block;
   padding: 0px 20px;
+  background-color: rgba(0, 136, 169, 1);
+  border: none;
+  border-radius: 50px;
+  cursor:pointer;
+  transition: all 0.3s ease 0s;
+  text-decoration: none;
 }
 .nav-links li a {
   transition: all 0.3s ease 0s;
 }
-.nav-links li a:hover {
-  color: #0088a9;
+.nav-links li:hover {
+  background-color: rgba(0, 136, 169, 0.6);
 }
 .nav-bar {
-  position:sticky;
+  position: relative;
+  bottom: 40px;
+  vertical-align: bottom;
+  width: 1522px;
   background-color: transparent;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 30px 10%;
+  padding: 10px 10%;
 }
 li, a, .login{
   font-family: "Montserrat",sans-serif;
   font-weight: 500;
-  font-size: 16px;
+  font-size: 20px;
   color: #edf0f1;
   text-decoration: none;
+  /* position: relative;
+  bottom: -30px;
+  vertical-align: bottom; */
 }
  .login {
   padding: 9px 25px;
@@ -44,7 +56,7 @@ li, a, .login{
   text-decoration: none;
 } 
 .login:hover {
-  background-color: rgba(0, 136, 169, 0.8);
+  background-color: rgba(0, 136, 169, 0.6);
 }
 .logo-picture{
   display: flex;
