--- a/css/movieInformation.css
+++ b/css/movieInformation.css
@@ -12,10 +12,6 @@
   height: 19vw;
   overflow: scroll;
 }
-.movieClick {
-  font-style: italic;
-  cursor: pointer;
-}
 #moviePic {
   width: auto !important;
   max-width: 50%;
@@ -24,6 +20,6 @@
 }
 #titleName {
   font-style: italic;
-  color: #054074;
+  color: #fff;
   margin-left: 10px;
 }
