--- a/css/pictureLinks.css
+++ b/css/pictureLinks.css
@@ -1,3 +1,41 @@
 #moviePictureLink{
   width: 100px;
+  height: 170px;
+  border-radius: 3%;
+}
+.movieClick {
+  display: inline-block;
+  cursor: pointer;
+  border: 2px solid rgb(188, 196, 201);
+  padding: 10px 10px 10px 10px;
+}
+.movieClick:hover {
+  border: 2px solid #0088a9;
+  border-radius: 0%;
+  padding: 10px 10px 10px 10px;
+  display: inline-block;
+}
+#moviePictureButton {
+  padding: 5px 5px;
+  background-color: rgba(0, 136, 169, 1);
+  border: none;
+  border-radius: 10px;
+  cursor:pointer;
+  transition: all 0.3s ease 0s;
+  text-decoration: none;
+  justify-content: left;
+  color: #fff;
+}
+.filmObj {
+  display: inline-block;
+  width: 100%;
+  margin-left: 45px;
+}
+.movieFrame {
+  display: inline-block;
+  position:relative;
+  width: 40%;
+}
+.firstcolumn h2 {
+  text-align: center;
 }
