--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,9 @@ footer {
 h1 {
   font-family: 'David Libre', serif;
 }
+button {
+  font-family: 'Montserrat', serif;
+}
 
 body {
   display: flex;
@@ -27,7 +30,7 @@ main {
   flex: 1;
 }
 p {
-  margin: 10px;
+  margin: 20px;
   color: #fff;
 }
 
