--- a/css/pictureLinks.css
+++ b/css/pictureLinks.css
@@ -1,41 +1,44 @@
-#moviePictureLink{
-  width: 100px;
-  height: 170px;
-  border-radius: 3%;
-}
-.movieClick {
+.filmObj {
   display: inline-block;
-  cursor: pointer;
-  border: 2px solid rgb(188, 196, 201);
-  padding: 10px 10px 10px 10px;
+  width: 100%;
 }
-.movieClick:hover {
-  border: 2px solid #0088a9;
-  border-radius: 0%;
+#moviePictureLink{
+  width: 180px;
+  height: 280px;
+  border-radius: 3%;
+  display: flex;
+  cursor: pointer;
+  margin: auto;
+}
+.movieFrame {
+  display: inline-block;
+  width: 18%;
+  border: 2px solid rgb(0, 0, 0);
+  padding: 10px 10px 10px 10px;
+  /* padding-left: 15px;
+  padding-right: 40px; */
+  /* padding: 15px 0px 40px 40px; */
+}
+.movieFrame:hover {
+  border: 2px solid rgba(116, 0, 0, 1);
+  border-radius: 3%;
   padding: 10px 10px 10px 10px;
   display: inline-block;
 }
 #moviePictureButton {
   padding: 5px 5px;
-  background-color: rgba(0, 136, 169, 1);
+  background-color: rgba(116, 0, 0, 1);
   border: none;
   border-radius: 10px;
   cursor:pointer;
   transition: all 0.3s ease 0s;
   text-decoration: none;
-  justify-content: left;
   color: #fff;
+  display: flex;
+  margin: auto;
 }
-.filmObj {
-  display: inline-block;
-  width: 100%;
-  margin-left: 45px;
-}
-.movieFrame {
-  display: inline-block;
-  position:relative;
-  width: 40%;
-}
-.firstcolumn h2 {
+.secondcolumn h2 {
   text-align: center;
+  font-size: 50px;
+  color: #fff;
 }
