--- a/css/style.css
+++ b/css/style.css
@@ -23,41 +23,39 @@ body {
   min-height: 100vh;
   flex-direction: column;
   font-family: 'Montserrat', serif;
-  background-color: rgb(188, 196, 201);
-  width: 100%;
-}
-main {
-  flex: 1;
+  background-color: rgb(0, 0, 0);
+  margin:auto;
+  /* width: 100%; */
 }
 p {
   margin: 20px;
   color: #fff;
 }
 
-h2 {
-  padding-left: 10px;
-  text-align: left;
+ h2 {
+  /* padding-left: 10px;
+  text-align: left; */
   color: #ffffff;
-}
-
-.firstcolumn {
+} 
+/* Kommenterar ut denna medans jag experimenterar */
+/* .firstcolumn {
   float: left;
-  width: 20%;
+  width: 20vw;
   padding: 5px;
   padding-left: 10px;
   margin: 1%;
   border-radius: 2%;
   display: block;
-}
+} */
 .secondcolumn {
-  float: left;
-  width: 40%;
-  margin: 1%;
-  padding: 1%;
-  border-radius: 2%;
-  padding-bottom: 2.5rem;
-  display: block;
+  float: middle;
+  width: 80%;
+  margin: auto;
+  margin-bottom: 60px;
+  padding: 10px 10px 50px 10px;
+  border: 1px solid #fff;
 }
+/* Kommenterar ut denna medans jag experimenterar */
 /* .thirdcolumn {
   float: left;
   width: auto;
@@ -77,14 +75,14 @@ h2 {
   font-weight: bold;
 }
 
-.firstimage {
+/* .firstimage {
   width: 100%;
   border-radius: 3%;
-}
+} */
 
-iframe {
+/* iframe {
   border-radius: 3%;
-}
+} */
 
 /* .scheduleObj {
   max-height: 200px;
@@ -97,9 +95,9 @@ iframe {
 #booking-button {
   margin: 30px 30px 0px 30px;
 }
-.secondcolumn p {
+/* .secondcolumn p {
   text-align: left;
-}
+} */
 form {
   margin-left: 10px;
 }
