--- a/css/header.css
+++ b/css/header.css
@@ -18,7 +18,13 @@ header{
   cursor:pointer;
   transition: all 0.3s ease 0s;
   text-decoration: none;
+  
 }
+
+ul .active{
+ font-weight: bold;
+}
+
 .nav-links li a {
   transition: all 0.3s ease 0s;
 }
