--- a/css/pictureLinks.css
+++ b/css/pictureLinks.css
@@ -14,6 +14,7 @@
   border-radius: 0%;
   padding: 10px 10px 10px 10px;
   display: inline-block;
+ background-color:  rgb(222, 224, 224);
 }
 #moviePictureButton {
   padding: 5px 5px;
