--- a/css/style.css
+++ b/css/style.css
@@ -6,26 +6,24 @@
 @import './seats-booking.css';
 @import './pictureLinks.css';
 
-/* nav,
-footer {
-  background-color: lightblue;
-} */
-
 h1 {
   font-family: 'David Libre', serif;
 }
 button {
   font-family: 'Montserrat', serif;
 }
+main { 
+  flex-grow: 1;
+}
 
 body {
   display: flex;
   min-height: 100vh;
   flex-direction: column;
+  justify-content: space-between;
   font-family: 'Montserrat', serif;
   background-color: rgb(0, 0, 0);
-  margin:auto;
-  /* width: 100%; */
+  margin: 0;
 }
 p {
   margin: 20px;
@@ -48,11 +46,13 @@ p {
   display: block;
 } */
 .secondcolumn {
-  float: middle;
-  width: 80%;
+  display: flex;
+  flex-wrap: wrap;
+  flex-flow:column;
+  width: 60vw;
   margin: auto;
   margin-bottom: 60px;
-  padding: 10px 10px 50px 10px;
+  padding: 10px 10px 60px 10px;
   border: 1px solid #fff;
 }
 /* Kommenterar ut denna medans jag experimenterar */
