--- a/css/seats-booking.css
+++ b/css/seats-booking.css
@@ -1,3 +1,8 @@
+
+*{
+  box-sizing: border-box;
+}
+
 .seatingBooking {
   color: white;
   background-color: rgb(0, 0, 0);
@@ -10,10 +15,15 @@
   padding-left: 25px;
 }
 
+.obj {
+  /* display:flex; */
+}
+
 .seats {
-  width: 40px;
-  height: 25px;
-  padding-top: 5px;
+  max-width: 40px;
+  width: 18%;
+  height: 10%;
+  padding-top: 1%;
   font-family: 'Courier New', Courier, monospace;
   /* text-decoration: underline; */
   display: inline-block;
@@ -66,7 +76,7 @@ button:hover {
 
 /* .schema {
   width: 99%;
-  /* background-color: rgb(188, 196, 201); */
+  background-color: rgb(188, 196, 201);
   margin: 5px;
   margin: 1%;
   padding: 5px;
