--- a/css/seats-booking.css
+++ b/css/seats-booking.css
@@ -1,11 +1,12 @@
 
 *{
   box-sizing: border-box;
-}
+} 
 
 .seatingBooking {
+  /* display:flex; */
   color: white;
-  background-color: rgb(0, 0, 0);
+  background-color:black;
   width: 99%;
   border: solid black 1px;
   margin: 5px;
@@ -16,13 +17,15 @@
 }
 
 .obj {
-  /* display:flex; */
+  display:flex;
+  flex-wrap: wrap;
 }
 
 .seats {
+  /* flex-shrink: 1; */
   max-width: 40px;
-  width: 18%;
-  height: 10%;
+  width: 18px;
+  height: 10px;
   padding-top: 1%;
   font-family: 'Courier New', Courier, monospace;
   /* text-decoration: underline; */
@@ -38,6 +41,12 @@
   margin-right: 3px;
   border-bottom-left-radius: 35%;
   border-bottom-right-radius: 35%;
+}
+.obj > .a-hover:hover {
+  background-color: yellow;
+  cursor: pointer;
+  padding: 10px 0px 10px 0px;
+  border-radius: 5px;
 }
 
 .seatsrow:nth-child(5n) {
@@ -59,12 +68,7 @@ button:hover {
   cursor: pointer;
 }
 
-.a-hover:hover {
-  background-color: yellow;
-  cursor: pointer;
-  padding: 10px 0px 10px 0px;
-  border-radius: 5px;
-}
+
 
 .movieScreen {
   width: 80%;
