--- a/css/header.css
+++ b/css/header.css
@@ -1,54 +1,52 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
 header{
-  background-color: #24252A;
+  /* background-color: rgb(36, 37, 42); */
+  position: relative;
 }
 .nav-links {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  background-color: #24252A;
+  background-color: transparent;
   list-style: none;
 }
 .nav-links li {
   display: inline-block;
   padding: 0px 20px;
-  background-color: rgba(0, 136, 169, 1);
+  background-color: rgba(116, 0, 0, 1);
   border: none;
   border-radius: 50px;
   cursor:pointer;
   transition: all 0.3s ease 0s;
   text-decoration: none;
-  
 }
-
-ul .active{
- font-weight: bold;
-}
-
 .nav-links li a {
   transition: all 0.3s ease 0s;
 }
-.nav-links li a:hover {
-  color: #0088a9;
+.nav-links li:hover {
+  background-color: rgba(116, 0, 0, 0.6);
 }
 .nav-bar {
-  position:sticky;
+  position: relative;
+  bottom: 40px;
+  vertical-align: bottom;
+  width: 76vw;
   background-color: transparent;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 30px 10%;
+  padding: 10px 10%;
 }
 li, a, .login{
   font-family: "Montserrat",sans-serif;
   font-weight: 500;
-  font-size: 16px;
+  font-size: 20px;
   color: #edf0f1;
   text-decoration: none;
 }
  .login {
   padding: 9px 25px;
-  background-color: rgba(0, 136, 169, 1);
+  background-color: rgba(116, 0, 0, 1);
   border: none;
   border-radius: 50px;
   cursor:pointer;
@@ -56,7 +54,7 @@ li, a, .login{
   text-decoration: none;
 } 
 .login:hover {
-  background-color: rgba(0, 136, 169, 0.8);
+  background-color: rgba(116, 0, 0, 0.6);
 }
 .logo-picture{
   display: flex;
@@ -64,21 +62,9 @@ li, a, .login{
   position: sticky;
   max-width: 100%;
   cursor: pointer;
+  margin: auto;
 }
 .menu {
   text-align: center;
   padding-bottom: 10px;
 }
-
-/* header nav a {
-  font-family: verdana;
-  font-size: medium;
-  color: rgb(0, 0, 0);
-  display: inline-block;
-  margin-left: 30px;
-  margin-right: 10px;
-  text-decoration: none;
-  font-weight: bolder;
-  font-size: large;
-} */
-
