--- a/css/pictureLinks.css
+++ b/css/pictureLinks.css
@@ -1,42 +1,41 @@
+.filmObj {
+  display: inline-block;
+  width: 100%;
+}
 #moviePictureLink{
-  width: 100px;
-  height: 170px;
+  width: 180px;
+  height: 280px;
   border-radius: 3%;
-}
-.movieClick {
-  display: inline-block;
+  display: flex;
   cursor: pointer;
-  border: 2px solid rgb(188, 196, 201);
+  margin: auto;
+}
+.movieFrame {
+  display: inline-block;
+  width: 18%;
+  border: 2px solid rgb(0, 0, 0);
   padding: 10px 10px 10px 10px;
 }
-.movieClick:hover {
-  border: 2px solid #0088a9;
-  border-radius: 0%;
+.movieFrame:hover {
+  border: 2px solid rgba(116, 0, 0, 1);
+  border-radius: 3%;
   padding: 10px 10px 10px 10px;
   display: inline-block;
- background-color:  rgb(222, 224, 224);
 }
 #moviePictureButton {
   padding: 5px 5px;
-  background-color: rgba(0, 136, 169, 1);
+  background-color: rgba(116, 0, 0, 1);
   border: none;
   border-radius: 10px;
   cursor:pointer;
   transition: all 0.3s ease 0s;
   text-decoration: none;
-  justify-content: left;
   color: #fff;
+  display: flex;
+  margin: auto;
 }
-.filmObj {
-  display: inline-block;
-  width: 100%;
-  margin-left: 45px;
-}
-.movieFrame {
-  display: inline-block;
-  position:relative;
-  width: 40%;
-}
-.firstcolumn h2 {
+.secondcolumn h2 {
   text-align: center;
+  font-size: 50px;
+  color: #fff;
 }
