--- a/css/movieInformation.css
+++ b/css/movieInformation.css
@@ -25,7 +25,15 @@
 
 }
 .trailer-container {
-  width: 60vw;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  right: 0;
+  position: absolute;
+  background: rgba(0,0,0,1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
   visibility: hidden;
   opacity: 0;
 }
@@ -34,6 +42,7 @@
   transition: ease-in 1s;
   visibility: visible;
   opacity: 1;
+  border: 1px solid #fff;
 }
 
 #trailer {
