--- a/css/pictureLinks.css
+++ b/css/pictureLinks.css
@@ -1,4 +1,5 @@
 .filmObj {
+  position: relative;
   display: inline-block;
   width: 100%;
 }
@@ -11,6 +12,7 @@
   margin: auto;
 }
 .movieFrame {
+  margin-left: 18px;
   display: inline-block;
   width: 18%;
   border: 2px solid rgb(0, 0, 0);
