--- a/css/movieInformation.css
+++ b/css/movieInformation.css
@@ -1,14 +1,19 @@
 .moviePicture {
   display:flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: space-between;
   width: 100%;
+  align-items: baseline;
 }
 
 #close-button {
-  position: relative;
-  padding: 5px 10px 5px 10px;
-  font-size: 15px;
+  position: absolute;
+  padding: 1px 10px 1px 10px;
+  font-size: 35px;
+  top: 9%;
+  right: 2%;
+  border-radius: 50%;
+  background-color: transparent;
+  color: #fff;
 }
 
 .trailer video {
@@ -30,7 +35,7 @@
   top: 0;
   right: 0;
   position: absolute;
-  background: rgba(0,0,0,1);
+  background: linear-gradient(to bottom right, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.85));
   display: flex;
   justify-content: center;
   align-items: center;
@@ -45,16 +50,16 @@
 }
 
 #trailer {
-  position: sticky;
-  width: 52vw;
-  height: 30vw;
+  position: absolute;
+  width: 100%;
+  height: 100%;
   overflow: scroll;
   border: none;
 }
 
 #moviePic {
-  width: 20vw;
-  height: 20vw;
+  width: 10vw;
+  height: 15vw;
 }
 
 #titleName {
@@ -62,22 +67,52 @@
   color: #fff;
   margin-left: 10px;
 }
-
+.button-trailer {
+  position:absolute;
+  width: 20%;
+  height: 20%;
+}
+#book-tickets {
+  position: absolute;
+  left: 90%;
+  top: 45%;
+  background: linear-gradient(to top right, rgb(255, 255, 255), rgb(64, 64, 70));
+}
+#book-tickets:hover {
+  animation: bounce 1s;
+}
+@keyframes bounce {
+  0%, 20%, 60%, 100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+  40% {
+    -webkit-transform: translateY(-20px);
+    transform: translateY(-20px);
+  }
+  80% {
+    -webkit-transform: translateY(-10px);
+    transform: translateY(-10px);
+  }
+}
 #trailer-button {
-  margin-left: 520px;
-  margin-bottom: 30px;
-  padding: 5px 14px;
-  border-radius: 50px;
-  border-style: double;
-  font-size: 18px;
-  text-align:center; 
+  position: absolute;
+  left: 82%;
+  top: 45%;
+  background: linear-gradient(to bottom left, rgb(255, 255, 255), rgb(64, 64, 70));
+}
+#trailer-button:hover {
+  animation: bounce 1s;
 }
 .movie-information {
   color: #fff;
-  padding-bottom: 10px;
+  padding-bottom: 5px;
 }
 .movie-information-label {
   font-size: 14px;
   color: gray;
   padding-bottom: 2px;
+}
+.movie-information-value > p {
+  margin: 0;
 }
