--- a/css/pictureLinks.css
+++ b/css/pictureLinks.css
@@ -16,7 +16,7 @@
   margin-left: 18px;
   display: inline-block;
   width: 18%;
-  border: 2px solid rgb(0, 0, 0);
+  border: 2px solid transparent;
   padding: 10px 10px 10px 10px;
   transition: transform .5s ease;
 }
