--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ body {
   flex-direction: column;
   justify-content: space-between;
   font-family: 'Montserrat', serif;
-  background-color: rgb(0, 0, 0);
+  background: linear-gradient(to bottom right, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.85));
   margin:auto;
 }
 
@@ -45,7 +45,7 @@ p {
   margin: auto;
   margin-bottom: 60px;
   padding: 10px 10px 60px 10px;
-  border: 1px solid #fff;
+  /* background: linear-gradient(to right bottom, rgb(7, 7, 7), rgb(116, 0, 0)); */
 }
 
 .schemarubrik {
