Added dropdown menu for filmer, added a new css-file for it

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -6,6 +6,7 @@
 @import './seats-booking.css';
 @import './pictureLinks.css';
 @import './dropdown.css';
+@import './nav-dropdown.css';
 
 *{
     box-sizing: border-box;
