--- a/www/css/movieInformation.css
+++ b/www/css/movieInformation.css
@@ -99,12 +99,6 @@
   margin-left: 10px;
 }
 
-#book-tickets {
-  background: linear-gradient(to top right, rgb(255, 255, 255), rgb(64, 64, 70));
-}
-#book-tickets:hover {
-  animation: bounce 1s;
-}
 @keyframes bounce {
   0%, 20%, 60%, 100% {
     -webkit-transform: translateY(0);
@@ -122,9 +116,19 @@
 
 #trailer-button {
   background: linear-gradient(to bottom left, rgb(255, 255, 255), rgb(64, 64, 70));
+  font-size: 16px;
 }
 
 #trailer-button:hover {
+  animation: bounce 1s;
+}
+
+#book-tickets {
+  background: linear-gradient(to bottom left, rgb(255, 255, 255), rgb(64, 64, 70));
+  font-size: 16px;
+}
+
+#book-tickets:hover {
   animation: bounce 1s;
 }
 
@@ -141,4 +145,25 @@
 
 .movie-information-value > p {
   margin: 0;
+}
+@media screen and (max-width: 768px) {
+  #moviePic {
+    width: 130px;
+    height: 180px;
+  }
+  #book-tickets {
+    font-size: 16px;
+  }
+  #trailer-button {
+    font-size: 16px;
+  }
+  .buttons-movie-info {
+    text-align: left;
+  }
+  .movie-info > h3 {
+    /* padding-bottom: 60px; */
+    font-size: 25px;
+    text-align: top;
+    margin-top: 0;
+  }
 }
