--- a/www/css/nav-dropdown.css
+++ b/www/css/nav-dropdown.css
@@ -3,17 +3,6 @@
   overflow: hidden;
 }
 
-.dropdown > .dropbtn {
-  font-size: 20px;
-  border: none;
-  outline: none;
-  color: white;
-  background-color: inherit;
-  font-family: inherit;
-  margin: 0;
-  padding: 0;
-}
-
 .navbar a:hover, .dropdown:hover .dropbtn {
   background-color: inherit;
 }
@@ -21,7 +10,6 @@
 .dropdown-content {
   display: none;
   position: absolute;
-  /* left: 37.8%; */
   background: linear-gradient(to bottom left, rgb(255, 255, 255), rgb(64, 64, 70));
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
@@ -50,8 +38,26 @@
 .dropbtn {
   color:#fff;
   background-color:transparent;
-  border: 0;
-  font-size: 20px;
+  border: none;
+  outline:none;
+  font-size: 18px;
   font-family:"Montserrat",sans-serif;
 
+}
+@media screen and (max-width: 768px) {
+  .dropdown-content {
+    position: relative;
+    display: none;
+    background:rgb(53, 53, 53);
+    border-radius: 0;
+  }
+  .dropdown-content > a {
+    color: rgb(75, 75, 75);
+    padding: 0;
+    font-size: 14px;
+    margin-top: 10px;
+  }
+  .dropdown:hover .dropdown-content {
+    display:block;
+  }
 }
