--- a/www/css/login-reg-form.css
+++ b/www/css/login-reg-form.css
@@ -3,10 +3,10 @@
   display: flexbox(right);
   position: absolute;
 }
-main{
+/* main{
     background-image:linear-gradient(120deg,#cf6d6d,#2c1f1f,#ddd)
 
-}
+} */
 .loginForm {
  position: relative;
  right: -25%;
