--- a/www/css/header.css
+++ b/www/css/header.css
@@ -1,7 +1,7 @@
 header{
   background: linear-gradient(to left right,  rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.9));
   position: relative;
-  min-height: 50vh;
+  min-height: 30vh; 
 }
 
 .nav-links {
@@ -14,28 +14,32 @@ header{
 .nav-links li {
   display: inline-block;
   padding: 0px 10px;
-  background-color: rgba(116, 0, 0, 1);
+  /* background-color: rgba(28, 43, 179, 0.5); */
   border: none;
-  border-radius: 50px;
+  /* border-radius: 50px; */
   cursor: pointer;
-  transition: all 0.3s ease 0s;
+  /* transition: all 0.3s ease 0s; */
   text-decoration: none;
 }
 
-.nav-links li a {
+/* .nav-links li a {
   transition: all 0.3s ease 0s;
+} */
+.nav-links:hover li {
+  opacity: 0.2;
+  filter: blur(0.0625rem);
 }
 
 .nav-links li:hover {
-  background-color: rgba(116, 0, 0, 0.6);
+  opacity: 1;
+  filter: blur(0rem);
 }
 
 .nav-bar {
-  position: relative;
+  position: sticky;
   bottom: 36px;
   vertical-align: bottom;
-  width: auto;
-  background-color: transparent;
+  background: linear-gradient(to right bottom, rgba(255,255,255,0.1), rgba(255,255,255,0.1));
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -43,13 +47,18 @@ header{
 }
 .nav-bar > p {
   display: flex;
+  font-family: 'Permanent Marker', cursive;
+  font-size: 35px;
+  font-weight: 700;
+  margin: 0; 
+  color: #001b31;
 }
 
 .nav-links > li, a, .login{
   font-family: "Montserrat",sans-serif;
   font-weight: 500;
   font-size: 18px;
-  color: #edf0f1;
+  color: #002849;
   text-decoration: none;
 }
 
@@ -64,9 +73,9 @@ header{
   text-decoration: none;
 }  */
 
-.login:hover {
+/* .login:hover {
   background-color: rgba(116, 0, 0, 0.6);
-}
+} */
 
 .logo-picture{
   display: flex;
@@ -89,7 +98,7 @@ header{
 .burger div {
   width: 25px;
   height: 3px;
-  background-color:rgba(116, 0, 0, 1);
+  background-color: #002849;
   margin: 5px;
   transition: all 0.3s ease;
 }
