--- a/www/css/nav-dropdown.css
+++ b/www/css/nav-dropdown.css
@@ -19,7 +19,7 @@
 
 .dropdown-content > a {
   float: center;
-  color: rgb(102, 34, 34);
+  color: #002849;
   padding: 12px 12px;
   font-size: 16px;
   text-decoration: none;
@@ -36,7 +36,7 @@
 }
 
 .dropbtn {
-  color:#fff;
+  color:#002849;
   background-color:transparent;
   border: none;
   outline:none;
