--- a/www/css/pictureLinks.css
+++ b/www/css/pictureLinks.css
@@ -41,7 +41,7 @@
 .secondcolumn h2 {
   text-align: center;
   font-size: 50px;
-  color: #fff;
+  color:  #002849;
 }
 @media screen and (max-width: 768px) {
   .filmObj {
