--- a/www/css/login-reg-form.css
+++ b/www/css/login-reg-form.css
@@ -14,8 +14,8 @@ main{
   
   /* border: 2px solid rgba(255, 255, 255,0.2); */
  position: relative;
- right: -25%;
-  width: 50%;
+
+  width: 100%;
   height: 80%;
   background: rgba(255, 255, 255,0.1);
   /* background: #f1f1f1; */
@@ -77,8 +77,6 @@ outline: none;
 /*----------------reg formulär-------------- */
 .regform2{
    position: relative;
- right: -25%;
-  width: 50%;
   height: 80%;
   background: rgba(255, 255, 255,0.1);
   padding: 80px,40px;
@@ -105,19 +103,21 @@ outline: none;
   outline: none; 
   flex-grow: 1;
 }
-.regform2 .btn{
-  font-family: fantasy;
+.regform2 button .btn{
+  border:none;
+  size: 200px;
+  font-family: "Montserrat",sans-serif;
     color:rgb(255, 255, 255);
   background: #740000;
-	padding: 1px;  
+	/* padding: 1px;  
     font-size: 12px;  
     text-shadow: 0px 1px 0px #fff;  
-    outline: none; 
+    outline: none;  */
 }
-.regform2 #res:focus{
+/* .regform2 #res:focus{
 border: 2px solid #aaa;
 border:linear-gradient(to bottom left, rgb(255, 255, 255), rgb(64, 64, 70));
-outline: none;
+outline: none; */
 /* ------------
  
   
@@ -128,11 +128,6 @@ outline: none;
   left:25%;
   display: flexbox;
   /* align-items:right;
-  align-content: center; */
-}
+  align-content: center; 
+}*/
 
-@media screen and(max-width:1000px){
-  .loginForm{
-    background-color: black;
-  }
-}
