--- a/www/css/footer.css
+++ b/www/css/footer.css
@@ -14,9 +14,13 @@ footer > p {
  margin: 10px 10px 10px 10px;
  font-size: 16px;
 }
-
 .info-footer:hover {
  background-color: rgba(116, 0, 0, 0.5);
  border-radius: 50px;
+}
+@media screen and (max-width: 375px) {
+  footer {
+    display: inline-block;
+  }
 
 }
