--- a/www/css/pictureLinks.css
+++ b/www/css/pictureLinks.css
@@ -1,21 +1,22 @@
 .filmObj {
   display: flex;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
   justify-content: center;
   align-items: center;
-  width: 100%;
+  max-width: 100%;
+  flex-shrink: inherit;
 }
 #moviePictureLink{
-  width: 180px;
-  height: 280px;
+  width: 10vw;
+  height: 15vw;
   border-radius: 3%;
   cursor: pointer;
   margin: auto;
 }
 .movieFrame {
   display:flex;
-  width:auto;
-  height: fit-content;
+  max-width: 100%;
+  height: auto;
   border: 2px solid transparent;
   padding: 10px 10px 10px 10px;
   transition: transform .5s ease;
@@ -37,6 +38,7 @@
   color: #fff;
   display: flex;
   margin: auto;
+  font-size: 1vw;
 }
 .secondcolumn h2 {
   text-align: center;
@@ -46,8 +48,16 @@
 @media screen and (max-width: 768px) {
   .filmObj {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     padding: 0;
+  }
+  #moviePictureLink {
+    width: 120px;
+    height: 220px;
+  }
+  #moviePictureButton {
+    font-size: 2vw;
   }
 }
